results/SpecGenBench/conversational/log-NegAbs-2023_11_28_22_25_49.txt
public class NegAbs {
	//@ ensures \result >= 0;
	//@ ensures \result == num < 0 ? num : -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: error: incomparable types: int and boolean
	//@ ensures \result == num < 0 ? num : -num;
	                    ^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: error: incompatible types: int cannot be converted to boolean
	//@ ensures \result == num < 0 ? num : -num;
	                               ^
2 errors

public class NegAbs {
	//@ ensures \result >= 0;
	//@ ensures \result == (num < 0 ? num : -num);
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:2:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:6:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:2:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:7:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

public class NegAbs {
	//@ requires num >= Integer.MIN_VALUE;
	//@ ensures \result >= 0;
	//@ ensures num < 0 ==> \result == num;
	//@ ensures num >= 0 ==> \result == -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}
}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NegAbs.java:3:) in method negAbs
			return num;
			^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NegAbs.java:8:
	//@ ensures \result >= 0;
	    ^
2 verification failures

